clang/test/BSC/Negative/OwnedStruct/destructor/incomplete_destructor_owned_nongeneric_struct.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Owned struct S {
  ~S;
  // expected-error@-1 {{'~S' cannot be the name of a variable or data member}}
};